--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,1 +1,1 @@
-{"projects":[{"name":"scratch-pad","title":"Scratch Pad","description":"Practice the art of JavaScript by passing unit tests","date":"Monday, December 17, 2018"}]}
+{"projects":[{"name":"scratch-pad","title":"Scratch Pad","description":"Practice the art of JavaScript by passing unit tests","date":"Monday, December 17, 2018"},{"name":"matchy","title":"Matchy","description":"Practice all the ways to dynamically create and access data structures","date":"Monday, December 31, 2018"}]}
